# nd-zipfile-py

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml  pyproject.toml
.github/workflows/: CI.yml
nd_zipfile/: __init__.py  nd_zipfile.pyi
src/: lib.rs  read.rs  write.rs
