[package]
name = "nd-zipfile"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "nd_zipfile"
crate-type = ["cdylib"]

[dependencies]
ouroboros = "0.18.5"
parking_lot = { version = "0.12.4", features = [ "arc_lock", "send_guard" ] }
pyo3 = { version = "0.25.0", features = [ "abi3", "abi3-py38" ] }
zip = { version = "4.0.0", features = [] }
